# dataset_prepare

./: .gitignore  README.md  main.py  pyproject.toml  合同模型测试数据集.tsv  合同模型测试数据集.xlsx
contracts/L1/: DS-L1-01.md  DS-L1-02.md  DS-L1-03.md  DS-L1-04.md  DS-L1-05.md  DS-L1-06.md  DS-L1-07.md  DS-L1-08.md  DS-L1-09.md  DS-L1-10.md  DS-L1-11.md
contracts/L2/: DS-L2-01.md  DS-L2-02.md  DS-L2-03.md  DS-L2-04.md  DS-L2-05.md  DS-L2-06.md  DS-L2-07.md  DS-L2-08.md  DS-L2-09.md  DS-L2-10.md
contracts/L3/: DS-L3-01.md  DS-L3-02.md  DS-L3-03.md  DS-L3-04.md  DS-L3-05.md  DS-L3-06.md  DS-L3-07.md  DS-L3-08.md  DS-L3-09.md  DS-L3-10.md
dataset/: README.md  dataset.jsonl
docs/: kb_doc_generation_prompt.md  kb_doc_simple_prompt.md  prompts.md
meta/: DS-L1-01.json  DS-L1-02.json  DS-L1-03.json  DS-L1-04.json  DS-L1-05.json  DS-L1-06.json  DS-L1-07.json  DS-L1-08.json  DS-L1-09.json  DS-L1-10.json  DS-L1-11.json  DS-L2-01.json  DS-L2-02.json  DS-L2-03.json  DS-L2-04.json  DS-L2-05.json  DS-L2-06.json  DS-L2-07.json  DS-L2-08.json  DS-L2-09.json  DS-L2-10.json  DS-L3-01.json  DS-L3-02.json  DS-L3-03.json  DS-L3-04.json  DS-L3-05.json  DS-L3-06.json  DS-L3-07.json  DS-L3-08.json  DS-L3-09.json  DS-L3-10.json
scripts/: build_dataset.py  generate_contracts.py  generate_new_contracts.py  render_images.py
